<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialog.DialogFragment"
    android:padding="50dp">

    <TextView
        android:id="@+id/tvTitleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_hasil_permainan"
        android:textSize="18sp"
        android:textAlignment="center"
        android:fontFamily="@font/chalkboard"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chalkboard"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMainLagi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/ungu1"
        android:fontFamily="@font/chalkboard"
        android:text="@string/text_main_lagi"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBackMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/kuning1"
        android:fontFamily="@font/chalkboard"
        android:text="@string/text_kembali_ke_menu"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMainLagi" />

</androidx.constraintlayout.widget.ConstraintLayout>